Add MailService with Springboot properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+mail.smtp.username=a7d2f751fb084d
+mail.smtp.password=c9e814ddf1a8fe
+mail.smtp.auth=true
+mail.smtp.starttls=true
+mail.smtp.host=smtp.mailtrap.io
+mail.smtp.port=587
+mail.smtp.trust=smtp.mailtrap.io
+
+
+
 
